Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.1
    = Fixed an issue where excavation wasn't using the correct permission node

Version 2.1.0
 + mcMMO now features XP bars! Configurable in experience.yml
 + Locale files now support & codes for colors and formatting!
 + Prevented exploits involving blocks made from entities (snowmen, etc..)
 + Added JSON integration to all Skill Commands
 + Added config setting to enable or disable old mcMMO skill scaling (General.RetroMode) this is on by default for existing installs
 + You can now disable specific skills in coreskills.yml without the need for permissions
 + Added links to mcMMO related websites to various commands
 + Certain elements of mcMMO's UI have been restyled
 + Added the tagline "Overhaul Era" to various locations until 3.0.0 comes out
 + You can now disable mcMMO completely for specific worlds via world_blacklist.txt in /plugins/mcMMO/
 + (WorldGuard) mcMMO now supports worldguard, you can use the flags "mcmmo" and "mcmmo-xp" on regions (they default to on unless otherwise specified)
 ! (Scoreboards) Scoreboards are now disabled by default, I don't like them. You can turn them back on in config.yml
 + (Sounds) Rolling now plays a sound (Graceful Roll has a different sound :) )
 + (Sounds) Activating Super abilities plays a sound (other plays can hear this)
 + (Sounds) Skill Unlock Notifications have sounds
 + (Sounds) Readying a tool for a super ability now plays a sound
 + (Sounds) Bleed DOT now plays a sound
 + (Experience) mcMMO now notifies you when you progress in a skill!
 + (Experience) Coral (blocks) now give Mining XP
 + (Experience) Coral (plants) now give Herbalism XP
 + (Experience) Blue Ice now gives Mining XP
 + (Experience) Dolphins now give combat XP
 + (Experience) Drowned mobs now count towards combat XP